[project]
name = "vibe-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timo van Niedek", email = "timovanniedek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vibe-journal = "vibe_journal:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
